light mode updated

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="tokenCards">                
             </div>
         </div>
-        <aside>
+        <aside id="sidebar">
             <div id="tokenNav" class="nav-links"></div>
         </aside>
     </div>
