--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="token-div">
         <div class="content">  
-            <form action="">
+            <form>
                 <div>
                     <p>Filter Tokens</p>
                     <input type="text" id="search" placeholder="Search..">
